--- a/css/style.css
+++ b/css/style.css
@@ -5,5 +5,8 @@ body{position: relative; z-index: 1;}
 
 #app canvas{width: 100%;height: 100%;}
 
-#text-container{pointer-events: none; position: absolute; top: 0; bottom: 0; left: 0; right: 0; width: 100%; height: 100%; z-index: 0; display: flex; justify-content: center;}
+#text-container{display:none !important; pointer-events: none; position: absolute; top: 0; bottom: 0; left: 0; right: 0; width: 100%; height: 100%; z-index: 0; display: flex; justify-content: center;}
 #text-container div{width: 100%; height: 100%; font-size: 1.2rem; text-align: justify; padding: 10px;}
+
+
+#web-socket{position: absolute; top: 0; left: 0;height: 150px;}
