--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,13 @@ body{position: relative; z-index: 1;}
 
 #app canvas{width: 100%;height: 100%;}
 
-#text-container{display: none; pointer-events: none; 
-    position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: -1;  
+#text-container{display: block; pointer-events: none; 
+    position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 1;  
     width: 100%; height: 100%; justify-content: center;
     font-family: CourierPrime-Regular;}
 
-#text-container div{width: 100%; height: 100%; font-size: 1.2rem; text-align: justify; padding: 10px;}
+#text-container div{display:flex; justify-content: left; font-size: 1.2rem; padding: 10px; position: absolute; bottom: 0;flex-wrap: wrap;}
+/*#text-container div p{flex:none;flex-wrap: wrap;}*/
 
 #white-screen{display:none; pointer-events: none; background-color: #ffffff;
     position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: -1;  
