--- a/css/style.css
+++ b/css/style.css
@@ -24,11 +24,27 @@ body{position: relative; z-index: 1;}
 #text-container div{display:flex; justify-content: left; font-size: 1.2rem; padding: 10px; position: absolute; bottom: 0;flex-wrap: wrap;}
 /*#text-container div p{flex:none;flex-wrap: wrap;}*/
 
+
+.text-blink-it{animation-name: blink;animation-duration: 1s; animation-iteration-count: infinite;}
+@keyframes blink {
+    0% {
+        color: black
+    }
+
+    50% {
+        color: red;
+    }
+
+    100% {
+        color: black
+    }
+}
+
+
+
 #white-screen{display:none; pointer-events: none; background-color: #ffffff;
     position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: -1;  
     width: 100%; height: 100%;}
 
 .flash{z-index: 0 !important; display: flex !important;}
 
-
-#web-socket{display:none; position: absolute; top: 0; left: 0;height: 150px;}
