--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,16 @@ body{position: relative; z-index: 1;}
     width: 100%; /*height: 100%;*/
     font-family: CourierPrime-Regular;}
 
+#text-container > .text {
+    position: absolute;
+  /*border: 1px solid red;*/
+  /* height: 20px; */
+  width: 100%;
+  top: 100%;
+}
+
+.text-line-code{font-weight: bold; font-size: 21px;}
+
 /* #text-container div{display:flex; justify-content: left; font-size: 1.2rem; padding: 10px; position: absolute; bottom: 0;flex-wrap: wrap;} */
 /*#text-container p{margin-top: 10px;margin-bottom: 10px;}*/
 
