--- a/css/style.css
+++ b/css/style.css
@@ -23,17 +23,11 @@ body{position: relative; z-index: 1;}
 
 #text-container > .text {
     position: absolute;
-  /*border: 1px solid red;*/
-  /* height: 20px; */
-  width: 100%;
-  top: 100%;
+    width: 100%;
+    top: 100%;
 }
 
 .text-line-code{font-weight: bold; font-size: 21px;}
-
-/* #text-container div{display:flex; justify-content: left; font-size: 1.2rem; padding: 10px; position: absolute; bottom: 0;flex-wrap: wrap;} */
-/*#text-container p{margin-top: 10px;margin-bottom: 10px;}*/
-
 #rotation-values{
     position: absolute; top: 0; left: 0;border: 1px solid red; z-index: 3;
     width: 300px;height: 150px;
@@ -55,11 +49,4 @@ body{position: relative; z-index: 1;}
     }
 }
 
-
-
-#white-screen{display:none; pointer-events: none; background-color: #ffffff;
-    position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: -1;  
-    width: 100%; height: 100%;}
-
-.flash{z-index: 0 !important; display: flex !important;}
-
+/*#hideButton{}*/
