--- a/style.css
+++ b/style.css
@@ -4,7 +4,29 @@
 
 @layer base{
 
+    *, html, body{
+        @apply box-border;
+        @apply m-0 p-0;
+    }
+
     #app{
         @apply absolute top-0 left-0 w-full h-full;
+    }
+
+    /* FACE RECOGNITION */
+    #webcam{
+        @apply absolute;
+        @apply hidden; 
+    }
+    #output_canvas{
+        @apply absolute left-0 top-0;
+        @apply hidden;
+    }
+
+    .blend-shapes{
+        @apply w-full;
+    }
+    #video-blend-shapes{
+        /* @apply flex; */
     }
 }
