--- a/style.css
+++ b/style.css
@@ -23,11 +23,11 @@
     #canvas{
         @apply absolute top-0 left-0 w-full h-full z-10;
     }
-    #text-container{
+    #text_container{
         @apply absolute top-0 left-0 w-full h-full z-20;
         @apply pointer-events-none;
     }
-    #superDiv{
+    #strobe_container{
         @apply absolute top-0 left-0 w-full h-[100vh] z-30;
     }
 
