--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
     *, html, body{
         @apply box-border;
-        @apply overflow-hidden
+        @apply overflow-hidden;
         @apply m-0 p-0;
     }
     
