--- a/style.css
+++ b/style.css
@@ -6,8 +6,11 @@
 
     *, html, body{
         @apply box-border;
-        @apply overflow-hidden;
+        
         @apply m-0 p-0;
+    }
+    html,body{
+        @apply overflow-hidden;
     }
     
     body{
