--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@
         @apply absolute left-0 top-0 w-full h-[100vh] z-30;
         @apply p-10;
         @apply bg-white flex flex-col items-center space-y-4 sm:space-y-10;
-        /*@apply hidden;*/
+        @apply hidden;
     }
     #hideButton{
         @apply text-black bg-lime-400 px-10;
