--- a/style.css
+++ b/style.css
@@ -122,21 +122,14 @@
     @keyframes turn {
         from { transform: rotate3d(0, 0, 0, 0); }
         to { transform: rotate3d(1, 1, 0, 360deg); }
-      }
-      
-      
-          
-
-      
-
-    
-    
+    }
 
     #canvas{
         @apply absolute top-0 left-0 w-full h-full z-10;
     }
     #strobe_container{
         @apply absolute top-0 left-0 w-full h-[100vh] z-30;
+        @apply pointer-events-none;
     }
 
     /* FACE RECOGNITION */
